--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -38,6 +38,7 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_RSEQ is not set
 CONFIG_EMBEDDED=y
+CONFIG_PERF_EVENTS=y
 CONFIG_PERF_KERNEL_SHARE=y
 CONFIG_VM_EVENT_COUNT_CLEAN_PAGE_RECLAIM=y
 # CONFIG_SLUB_DEBUG is not set
@@ -46,7 +47,6 @@ CONFIG_VM_EVENT_COUNT_CLEAN_PAGE_RECLAIM=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
-CONFIG_PROFILING=y
 # CONFIG_ZONE_DMA32 is not set
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_HOLI=y
