--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -249,6 +249,7 @@ CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
 # CONFIG_ALLOW_DEV_COREDUMP is not set
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
